# invoke_bench_tool

./: .gitignore  README.md  pyproject.toml
examples/: cogview4.toml  flux.toml  flux2.toml  sd1.toml  sd2.toml  sd3.toml  sdxl.toml  z-image.toml
invokeai_bench/: __init__.py  cli.py  client.py  config.py  results.py  runner.py  submodels.py  sysinfo.py
invokeai_bench/graphs/: __init__.py  cogview4.py  common.py  flux.py  flux2.py  sd1.py  sd3.py  sdxl.py  z_image.py
