[project]
name = "invokeai-bench"
version = "0.1.0"
description = "Benchmark tool for InvokeAI — measures generation performance across all model types"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
invokeai-bench = "invokeai_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
